====================
Bazaar Release Notes
====================

.. contents::

IN DEVELOPMENT
==============

  IMPROVEMENTS:

   * Added a --coverage option to selftest. (Andrew Bennetts)

   * ``bzr commit`` now doesn't print the revision number twice. (Matt
     Nordhoff, #172612)

   * New configuration option ``bugtracker_<tracker_abbrevation>_url`` to
     define locations of bug trackers that are not directly supported by
     bzr or a plugin. The URL will be treated as a template and ``{id}``
     placeholders will be replaced by specific bug IDs.  (Lukáš Lalinský)

   * Support logging single merge revisions with short and line log formatters.
     (Kent Gibson)

   * User Guide enhanced with suggested readability improvements from
     Matt Revell and corrections from John Arbash Meinel. (Ian Clatworthy)

   * Quick Start Guide renamed to Quick Start Card, moved down in
     the catalog, provided in pdf and png format and updated to refer
     to ``send`` instead of ``bundle``. (Ian Clatworthy, #165080)

  INTERNALS:

    * New -Dhttp debug option reports http connections, requests and responses.
      (Vincent Ladeuil)

    * New -Dmerge debug option, which emits merge plans for merge-type=weave.

  BUGFIXES:

   * Better error message when running ``bzr cat`` on a non-existant branch.
     (Lukáš Lalinský, #133782)

   * Catch OSError 17 (file exists) in final phase of tree transform and show
     filename to user.
     (Alexander Belchenko, #111758)

   * Catch ShortReadvErrors while using pycurl. Also make readv more robust by
     allowing multiple GET requests to be issued if too many ranges are
     required.
     (Vincent Ladeuil, #172701)

   * Check for missing basis texts when fetching from packs to packs.
     (John Arbash Meinel, #165290)

   * Fall back to showing e-mail in ``log --short/--line`` if the committer/author has
     only e-mail. (Lukáš Lalinský, #157026)

  API BREAKS:
